# yarp-device-speechTranscription-whisper

./: CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
src/devices/whisperSpeechTranscription/: CMakeLists.txt  whisperSpeechTranscription.cpp  whisperSpeechTranscription.h
src/devices/whisperSpeechTranscription/demos/: CMakeLists.txt  demo_audio_from_file.xml  demo_audio_from_mic.xml
src/devices/whisperSpeechTranscription/demos/yarprobotinterface_xml/: yarp_audioFromFile.xml  yarp_audioFromMic.xml  yarp_playAudio.xml  yarp_saveAudioToFile.xml  yarp_transcribe.xml
src/devices/whisperSpeechTranscription/tests/: CMakeLists.txt  whisperSpeechTranscription_test.cpp
